@@ -55,6 +55,7 @@ Engine fixes:
 * Improved performance when handling many status effects.
 * Improved performance when an entity is repeatedly unable to find a path to thier target.
 * Fix bug where killing an enemy with return damage would not set defeat status or reward XP/loot.
+* Fix check of item requirements when a power requires an item but doesn't consume it.
 
 Game updates:
 
